--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -54,12 +54,18 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         ./scripts/feeds install -a
+    # 移除 openwrt feeds 自带的核心库
+        rm -rf feeds/packages/net/{xray-core,v2ray-geodata,sing-box,chinadns-ng,dns2socks,hysteria,ipt2socks,microsocks,naiveproxy,shadowsocks-libev,shadowsocks-rust,shadowsocksr-libev,simple-obfs,tcping,trojan-plus,tuic-client,v2ray-plugin,xray-plugin,geoview,shadow-tls}
+        git clone https://github.com/Openwrt-Passwall/openwrt-passwall-packages package/passwall-packages
+
+    # 移除 openwrt feeds 过时的luci版本
+      rm -rf feeds/luci/applications/luci-app-passwall
+      git clone https://github.com/Openwrt-Passwall/openwrt-passwall package/passwall-luci
 
     - name: Import external feeds - passwall
       working-directory: ./openwrt
       run: |
         git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
-        git clone "your_github_link" package/"your_folder_name"      
 
     - name: Import external feeds - JerryKuKu Argon
       working-directory: ./openwrt
